# BookLeafPub-Assignment

./: .env.example  .gitignore  README.md  agent.py  chat.py  identity.py  ingestion.py  main.py  pyproject.toml  requirements.txt  test_agent.py  text.txt  tools.py  verify_db.py
database/: schema.sql  seed_data.sql
